--- a/contents/introduction.tex
+++ b/contents/introduction.tex
@@ -20,4 +20,4 @@ This paper makes the following contributions:
 \item Empirical evaluation demonstrating AGART's superior performance against other attack frameworks in terms of success rate, efficiency, and cross-model transferability
 \end{itemize}
 
-The remainder of this paper is organized as follows: Section 2 provides background on prompt injection attacks and GraphRAG. Section 3 details our system design and methodology. Section 4 presents experimental results and analysis. Section 5 discusses implications and future work. Section 6 concludes the paper. 
+The remainder of this paper is organized as follows: Section 2 provides background on prompt injection attacks and GraphRAG. Section 3 details our system design and methodology. Section 4 presents experimental results and analysis. Section 5 discusses implications and future work. Section 6 concludes the paper. The code and future work is available at \url{https://github.com/yunwei37/satml-llmail-injection}.
