--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -57,6 +57,8 @@
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{natbib}
+\usepackage{url}
+\usepackage{listings}
 \usetikzlibrary{shapes.geometric, arrows, positioning, fit, backgrounds, matrix, shapes.symbols, decorations.pathreplacing}
 
 %% \BibTeX command to typeset BibTeX logo in the docs
