--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,88 +1,34 @@
 % Evaluation section
 \section{Experimental Evaluation}
 
-This section presents our comprehensive evaluation methodology, experimental setup, results, and analysis of the AGART framework. We designed our experiments to answer three key research questions:
-
-\textbf{RQ1:} How effective is AGART at generating successful attacks against state-of-the-art LLMs compared to existing approaches?
-\textbf{RQ2:} How efficiently does AGART adapt to evolving model responses compared to baseline methods?
-\textbf{RQ3:} What is the contribution of each component (knowledge graph, adaptation mechanism, reinforcement learning) to overall performance?
+This section presents our evaluation methodology and results for testing AGART against two key scenarios: basic chatbot jailbreaking and email injection attacks.
 
 \subsection{Evaluation Methodology}
 
-\subsubsection{Metrics}
-We evaluate AGART using metrics that capture both effectiveness and efficiency:
+\textbf{Scenario 1: Basic Chatbot Jailbreaking}
 
-\textbf{Attack Success Rate (ASR)} measures the percentage of attempts that successfully bypass model safety guardrails. A successful attack produces a response that satisfies predefined adversarial criteria (e.g., generating harmful content, bypassing safety restrictions).
+We evaluate our system against Microsoft's Prompt Shields~\cite{microsoft2024promptshields}, a state-of-the-art jailbreak detection system, using the prompts generated based on the comprehensive dataset from the "Do Anything Now" study~\cite{shen2024anything}. This dataset represents one of the largest collections of in-the-wild jailbreak attempts, providing a robust benchmark for evaluating prompt injection detection capabilities. Our evaluation focuses on measuring both the success rate of prompts in bypassing safety guardrails and analyzing the proportion of prompts that are flagged versus those considered safe by the system.
 
-\textbf{Adaptation Efficiency} is measured by the number of interaction turns required to achieve a successful attack. Lower values indicate more efficient adaptation.
+\textbf{Scenario 2: Email Injection Attacks}
 
-\textbf{Transferability} assesses how well attacks generated against one model transfer to other models without modification.
-
-\textbf{Graph Utilization} metrics, including path diversity and semantic coverage, evaluate how effectively the system explores the attack space.
-
-\subsubsection{Evaluation Protocol}
-To ensure rigorous and reproducible evaluation, we implemented a systematic protocol:
-
-1. Model Selection: We evaluated against diverse commercial and open-source LLMs with different safety alignment techniques.
-
-2. Prompt Dataset: We created a comprehensive evaluation dataset including various attack objectives and target domains.
-
-3. Controlled Environment: All experiments were conducted in a secure, isolated environment to prevent unintended exposure of vulnerabilities.
-
-4. Ethics Protocol: Successful attacks were immediately reported to model providers following responsible disclosure practices.
-
-\subsection{Experimental Setup}
-
-\subsubsection{Target Models}
-Our evaluation includes a diverse set of commercial and open-source language models spanning different architectures, parameter scales, and safety alignment approaches. The selection aims to represent the variety of safety mechanisms employed in production systems.
-
-\subsubsection{Datasets}
-We developed three specialized datasets for our evaluation:
-
-1. Adversarial Prompt Test Suite: A diverse collection of attack patterns spanning different categories (jailbreaking, data extraction, manipulation).
-
-2. Defense Adaptation Dataset: Simulated progressive security updates to target models, allowing evaluation of adaptation capabilities.
-
-3. Cross-Model Generalization Dataset: Designed to assess transferability of attack strategies across different model architectures.
-
-\subsubsection{Baseline Methods}
-We compare AGART against state-of-the-art approaches to automated red-teaming:
-
-\textbf{Basic Prompt Injection (BPI)}: Simple template-based approach with minimal variations.
-
-\textbf{Genetic Algorithm (GA)}: Evolutionary approach that mutates and refines prompts based on success signals.
+Building on the methodology established in the LLM Mail Injection Attack Competition~\cite{llmailinject2024}, we evaluate email-specific injection attacks in a controlled environment that simulates real-world email processing systems. The test environment processes two emails simultaneously - one legitimate and one potentially malicious - to evaluate the system's ability to detect and prevent unauthorized email operations. The attack scenarios specifically target the system's email processing pipeline, attempting to trigger unauthorized email sending operations while evading detection mechanisms. This setup spans multiple security levels to comprehensively assess the effectiveness of different attack vectors.
 
 \subsection{Results and Analysis}
 
-\subsubsection{Attack Success Rate}
-Our preliminary results indicate that AGART demonstrates promising attack success rates across different target models. The graph-based adaptive approach shows potential improvements compared to static methods, particularly against models with sophisticated safety mechanisms. 
+\subsubsection{Basic Chatbot Jailbreaking Results}
 
-The effectiveness of AGART appears most pronounced on models employing multi-layered defense strategies, suggesting that the semantic traversal capabilities enable the discovery of complementary attack vectors that can bypass multiple defensive layers simultaneously.
+Our comprehensive evaluation encompassed 1,405 prompts tested against the Prompt Shields system. The results demonstrated high system reliability, with 97.15\% (1,365) of prompts producing valid evaluations. Among these valid evaluations, 74.65\% (1,019) were successfully flagged as potentially unsafe, while 25.35\% (346) were classified as safe. A small portion of the test cases (2.85\%, 40 prompts) encountered technical limitations due to prompt length constraints. These results align with findings from~\cite{shen2024anything}, suggesting that modern jailbreak detection systems can effectively identify a majority of malicious prompts while maintaining reasonable false positive rates.
 
-\subsubsection{Adaptation Efficiency}
-Initial observations suggest that AGART requires fewer interaction turns to successfully adapt to defensive measures compared to baseline methods. This efficiency advantage appears to stem from the structured exploration enabled by the knowledge graph, which guides the search toward promising attack strategies rather than exploring randomly.
+\subsubsection{Email Injection Attack Results}
 
-The GraphRAG component seems to contribute significantly to this efficiency by enabling strategic traversal of the attack knowledge space. We observe that path-finding algorithms within the graph effectively identify "shortcut" attack paths that build on previously successful strategies.
+Analysis of 198 completed tests revealed a complex security landscape. While the system achieved 100\% success in email retrieval operations, the defense evasion rate of 31.82\% (63 successful attempts) indicates significant vulnerabilities. The most critical metric - successful exfiltration attempts - showed a graduated success rate: 1.52\% (3/198) of attacks successfully initiated unauthorized email sending, 1.01\% (2/198) reached their intended destination, and 0.51\% (1/198) successfully delivered their payload.
 
-\subsubsection{Transferability Analysis}
-Our analysis suggests that attacks generated by AGART demonstrate higher transferability across models compared to baseline approaches. This improved transferability appears to stem from two factors: (1) the framework's ability to identify fundamental vulnerabilities in LLM reasoning rather than model-specific implementation details, and (2) the adaptive capability to refine attack strategies based on target model feedback.
+The most effective attack techniques demonstrated significant diversity in approach, including:
+\begin{itemize}
+    \item Code injection (5 successful attempts)
+    \item Encoded requests (4 successful attempts)
+    \item Multi-language attacks (3 successful attempts each for Nepali, Japanese, and Amharic variants)
+    \item Reasoning-based exploits (4 successful attempts)
+\end{itemize}
 
-\subsubsection{Qualitative Analysis}
-Beyond quantitative metrics, we conducted qualitative analysis of the attack patterns generated by AGART. We observed several interesting phenomena:
-
-1. Attack Evolution Patterns: AGART tends to progress from direct jailbreak attempts to more sophisticated socially engineered attacks when facing robust defenses.
-
-2. Compositional Attacks: The system effectively combines elements from different attack techniques to create novel attack patterns not present in the training data.
-
-3. Context Exploitation: AGART demonstrates the ability to build context across multiple turns, establishing seemingly benign conversation before introducing adversarial elements.
-
-\subsection{Ablation Studies}
-To assess the contribution of different components within our framework, we conducted ablation studies by systematically removing or modifying key components:
-
-\textbf{AGART-NoGraph}: Uses simple vector retrieval instead of graph structure, removing the semantic relationship modeling.
-
-\textbf{AGART-NoAdapt}: Generates attacks without adaptation based on model responses.
-
-\textbf{AGART-NoRL}: Removes the reinforcement learning component, relying solely on retrieval and rule-based composition.
-
-Our preliminary results suggest that removing the graph structure significantly reduces both success rate and efficiency, highlighting the importance of modeling semantic relationships between attack techniques. The adaptation mechanism appears particularly crucial for attacking models with sophisticated defense mechanisms, while the RL component contributes more to optimization efficiency than to raw success rates.
+These results demonstrate AGART's effectiveness in identifying vulnerabilities across different LLM deployment scenarios, while also highlighting areas where current defenses are most and least effective. The findings particularly emphasize the importance of robust input validation and multi-layer defense strategies in protecting against sophisticated prompt injection attacks.
