--- a/sample-base.bib
+++ b/sample-base.bib
@@ -1,4 +1,3 @@
-
 % Journals
 
 % First the Full Name is given, then the abbreviation used in the AMS Math
@@ -2077,4 +2076,30 @@ address      = {Berlin},
     journal   = {arXiv preprint},
     year      = {2024},
     url       = {https://arxiv.org/abs/2309.05274}
+}
+
+@misc{microsoft2024promptshields,
+  author = {{Microsoft}},
+  title = {Prompt Shields - Azure {AI} Content Safety},
+  year = {2024},
+  howpublished = {\url{https://learn.microsoft.com/en-us/azure/ai-services/content-safety/concepts/jailbreak-detection}},
+  note = {Accessed: 2024-04-15}
+}
+
+@inproceedings{shen2024anything,
+  author = {Shen, Xinyue and Chen, Zeyuan and Backes, Michael and Shen, Yun and Zhang, Yang},
+  title = {"Do Anything Now": Characterizing and Evaluating In-The-Wild Jailbreak Prompts on Large Language Models},
+  booktitle = {Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
+  series = {CCS '24},
+  year = {2024},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA}
+}
+
+@misc{llmailinject2024,
+  author = {{LLM Mail Injection}},
+  title = {LLM Mail Injection Attack Competition},
+  year = {2024},
+  howpublished = {\url{https://llmailinject.azurewebsites.net/}},
+  note = {Accessed: 2024-04-15}
 }
