Updates from Overleaf

--- a/contents/introduction.tex
+++ b/contents/introduction.tex
@@ -1,7 +1,7 @@
 % Introduction section
 \section{Introduction}
 
-The widespread deployment of Large Language Models (LLMs), such as GPT-4o, Claude, and Gemini, has revolutionized numerous applications but simultaneously exposed critical vulnerabilities related to adversarial prompt injection attacks. Prompt injection refers to maliciously crafted inputs designed to subvert LLM behavior, bypassing built-in safety mechanisms to extract sensitive information, trigger harmful outputs, or manipulate decision-making processes. In 2023, researchers demonstrated attacks that bypassed commercial LLM safety mechanisms with significant success rates~\cite{liu2023autodan}, while another study revealed that a substantial portion of LLM-powered applications lacked proper security measures against injection attacks~\cite{greshake2023youve}.
+The widespread deployment of Large Language Models (LLMs), such as GPT-4o, Claude, and Gemini, has revolutionized numerous applications but simultaneously exposed critical vulnerabilities related to adversarial prompt injection attacks. Prompt injection refers to maliciously crafted inputs designed to subvert LLM behavior, bypassing built-in safety mechanisms to extract sensitive information, trigger harmful outputs, or manipulate decision-making processes. Researchers also demonstrated attacks that bypassed commercial LLM safety mechanisms with significant success rates~\cite{liu2024autodan}.
 
 Despite existing defensive strategies—including static filtering (e.g., NeMo Guardrails\cite{nvidia2023nemo}), content moderation APIs, and reinforcement learning from human feedback (RLHF)—the robustness of these defenses remains limited. Attackers continually develop sophisticated obfuscation tactics such as token smuggling, multi-turn manipulations, role-playing scenarios, and character embedding (e.g., ASCII-art embedding), rendering static or simplistic protections insufficient and perpetuating an ongoing adversarial arms race.
 
@@ -9,7 +9,7 @@ Current red teaming methodologies for evaluating and improving LLM security face
 
 To overcome these shortcomings, our research introduces AGART (Adaptive Graph-based Adversarial Red Teaming), a novel self-adaptive red teaming framework leveraging Graph-based Retrieval-Augmented Generation (GraphRAG). Initially proposed by Microsoft Research, GraphRAG integrates the powerful semantic retrieval capabilities of Retrieval-Augmented Generation (RAG) with graph-based knowledge representation. Our framework transforms a comprehensive corpus of adversarial prompts (over 3,000 entries) and diverse attack methodologies (15+ distinct techniques) into a structured semantic knowledge graph that explicitly encodes intricate relationships between attack strategies, vulnerabilities, and target model behaviors.
 
-Unlike conventional vector similarity-based retrieval mechanisms used in baseline RAG systems, GraphRAG employs Large Language Models (LLMs) to generate rich, contextually grounded knowledge graphs. By explicitly representing adversarial prompts, attack techniques, and identified vulnerabilities within a graph structure, our system facilitates systematic exploration and optimization of attack strategies through graph traversal and reasoning. Leveraging graph algorithms (e.g., community detection, centrality analysis) combined with reasoning capabilities of advanced LLMs (e.g., O1, Claude), AGART dynamically identifies and synthesizes novel, semantically rich attack paths, providing interpretability through explicit path reasoning.
+Unlike conventional vector similarity-based retrieval mechanisms used in baseline RAG systems, GraphRAG employs Large Language Models (LLMs) to generate rich, contextually grounded knowledge graphs. By explicitly representing adversarial prompts, attack techniques, and identified vulnerabilities within a graph structure, our system facilitates systematic exploration and optimization of attack strategies through graph traversal and reasoning. Leveraging graph algorithms (e.g., community detection, centrality analysis) combined with reasoning capabilities of advanced LLMs (e.g., O3, Claude 3.7 thinging), AGART dynamically identifies and synthesizes novel, semantically rich attack paths, providing interpretability through explicit path reasoning.
 
 Our research assumes a threat model with black-box access to target LLM APIs with the ability to observe model responses. Attack goals include jailbreaking safety guardrails, extracting sensitive information, and manipulating model behavior. Target systems span commercial LLM APIs, locally deployed models, and LLM-powered applications. We assume no access to model weights or training data and adherence to API rate limits.
 
